--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,15 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/curso-r/SefazCE
 BugReports: https://github.com/curso-r/SefazCE/issues
+Imports: 
+    abjutils,
+    dplyr,
+    httr,
+    janitor,
+    magrittr,
+    purrr,
+    stringr,
+    tibble,
+    xml2
+Depends: 
+    R (>= 2.10)
